fixed header layout problem

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -1,9 +1,9 @@
 .app-header {
     position: fixed;
     padding: 10px;
-    background-color: transparent;
     grid-template-rows: 1fr;
     height: 80px;
+    width: 100%;
 
     >* {
         align-self: center;
